Fix a positioning bug with the sifters overlays
This seems... Wrong. Intuitively, it seems like this should run over the
bottom of the image. But it doesn't, and without this change it doesn't
cover the bottom 1%, so this must be correct.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 34%;
+  height: 35%;
   color: white;
   text-align: center;
 
